--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -162,3 +162,54 @@ button.primary {
 button.block {
   width: 100%;
 }
+
+/*form*/
+.form {
+  max-width: 60rem;
+  margin: 0 auto;
+  display: block;
+}
+.form > div {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+ 
+}
+.form label{
+  margin: 1rem 0;
+  display: block;
+}
+
+.dropdown{
+  position: relative;
+  display: inline-block;
+
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  min-width: 12rem;
+  padding: 1rem;
+  background-color: #203040;
+  margin: 0;
+  margin-top :0.4rem;
+  border-radius: 0.5rem;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.checkout-steps > div{
+
+  border-top: 0.3rem #c0c0c0 solid;
+  color: #c0c0c0;
+  flex:1;
+  padding : 1rem ; 
+}
+.checkout-steps > div.active {
+
+  border-top-color: 3rem #ff8000;
+  color: #ff8000;
+}
+
+
